Assignment2/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParCpp.y
-----------------------------------------------------------------------------

state 41 contains 3 shift/reduce conflicts.
state 44 contains 2 shift/reduce conflicts.
state 45 contains 2 shift/reduce conflicts.
state 46 contains 2 shift/reduce conflicts.
state 47 contains 4 shift/reduce conflicts.
state 48 contains 2 shift/reduce conflicts.
state 49 contains 1 shift/reduce conflicts.
state 50 contains 2 shift/reduce conflicts.
state 53 contains 1 shift/reduce conflicts.
state 113 contains 3 shift/reduce conflicts.
state 132 contains 3 shift/reduce conflicts.
state 143 contains 1 shift/reduce conflicts.
state 145 contains 4 shift/reduce conflicts.
state 146 contains 4 shift/reduce conflicts.
state 147 contains 2 shift/reduce conflicts.
state 148 contains 2 shift/reduce conflicts.
state 149 contains 2 shift/reduce conflicts.
state 150 contains 2 shift/reduce conflicts.
state 151 contains 2 shift/reduce conflicts.
state 152 contains 2 shift/reduce conflicts.
state 153 contains 2 shift/reduce conflicts.
state 154 contains 2 shift/reduce conflicts.
state 157 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pListStm -> ListStm                         (6)
	%start_pExp15 -> Exp15                             (7)
	%start_pExp14 -> Exp14                             (8)
	%start_pExp13 -> Exp13                             (9)
	%start_pExp12 -> Exp12                             (10)
	%start_pExp11 -> Exp11                             (11)
	%start_pExp10 -> Exp10                             (12)
	%start_pExp9 -> Exp9                               (13)
	%start_pExp8 -> Exp8                               (14)
	%start_pExp4 -> Exp4                               (15)
	%start_pExp3 -> Exp3                               (16)
	%start_pExp2 -> Exp2                               (17)
	%start_pExp1 -> Exp1                               (18)
	%start_pExp -> Exp                                 (19)
	%start_pExp5 -> Exp5                               (20)
	%start_pExp6 -> Exp6                               (21)
	%start_pExp7 -> Exp7                               (22)
	%start_pListExp -> ListExp                         (23)
	%start_pType -> Type                               (24)
	%start_pListId -> ListId                           (25)
	Integer -> L_integ                                 (26)
	Double -> L_doubl                                  (27)
	String -> L_quoted                                 (28)
	Id -> L_Id                                         (29)
	Program -> ListDef                                 (30)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (31)
	ListDef ->                                         (32)
	ListDef -> ListDef Def                             (33)
	Arg -> Type Id                                     (34)
	ListArg ->                                         (35)
	ListArg -> Arg                                     (36)
	ListArg -> Arg ',' ListArg                         (37)
	Stm -> Exp ';'                                     (38)
	Stm -> Type ListId ';'                             (39)
	Stm -> Type Id '=' Exp ';'                         (40)
	Stm -> 'return' Exp ';'                            (41)
	Stm -> 'return' ';'                                (42)
	Stm -> 'while' '(' Exp ')' Stm                     (43)
	Stm -> '{' ListStm '}'                             (44)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (45)
	ListStm ->                                         (46)
	ListStm -> ListStm Stm                             (47)
	Exp15 -> 'true'                                    (48)
	Exp15 -> 'false'                                   (49)
	Exp15 -> Integer                                   (50)
	Exp15 -> Double                                    (51)
	Exp15 -> String                                    (52)
	Exp15 -> Id                                        (53)
	Exp15 -> Type                                      (54)
	Exp15 -> Id '(' ListExp ')'                        (55)
	Exp15 -> Exp15 '::' ListExp Id                     (56)
	Exp15 -> Exp15 '::' ListExp                        (57)
	Exp15 -> '(' Exp ')'                               (58)
	Exp14 -> Exp15 '++'                                (59)
	Exp14 -> Exp15 '--'                                (60)
	Exp14 -> Exp15                                     (61)
	Exp13 -> '++' Exp14                                (62)
	Exp13 -> '--' Exp14                                (63)
	Exp13 -> Exp14                                     (64)
	Exp12 -> Exp12 '*' Exp13                           (65)
	Exp12 -> Exp12 '/' Exp13                           (66)
	Exp12 -> Exp13                                     (67)
	Exp11 -> Exp11 '+' Exp12                           (68)
	Exp11 -> Exp11 '-' Exp12                           (69)
	Exp11 -> Exp12                                     (70)
	Exp10 -> Exp10 '<<' Exp11                          (71)
	Exp10 -> Exp10 '>>' Exp11                          (72)
	Exp10 -> Exp11                                     (73)
	Exp9 -> Exp9 '<' Exp10                             (74)
	Exp9 -> Exp9 '>' Exp10                             (75)
	Exp9 -> Exp9 '<=' Exp10                            (76)
	Exp9 -> Exp9 '>=' Exp10                            (77)
	Exp9 -> Exp10                                      (78)
	Exp8 -> Exp8 '==' Exp9                             (79)
	Exp8 -> Exp8 '!=' Exp9                             (80)
	Exp8 -> Exp9                                       (81)
	Exp4 -> Exp4 '&&' Exp5                             (82)
	Exp4 -> Exp5                                       (83)
	Exp3 -> Exp3 '||' Exp4                             (84)
	Exp3 -> Exp4                                       (85)
	Exp2 -> Exp3 '=' Exp2                              (86)
	Exp2 -> Exp3                                       (87)
	Exp1 -> 'throw' Exp1                               (88)
	Exp1 -> Exp2                                       (89)
	Exp -> Exp1                                        (90)
	Exp5 -> Exp6                                       (91)
	Exp6 -> Exp7                                       (92)
	Exp7 -> Exp8                                       (93)
	ListExp ->                                         (94)
	ListExp -> Exp                                     (95)
	ListExp -> Exp ',' ListExp                         (96)
	Type -> 'bool'                                     (97)
	Type -> 'int'                                      (98)
	Type -> 'double'                                   (99)
	Type -> 'void'                                     (100)
	Type -> 'string'                                   (101)
	ListId -> Id                                       (102)
	ListId -> Id ',' ListId                            (103)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'--'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	'::'           { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<<'           { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'>>'           { PT _ (TS _ 21) }
	'bool'         { PT _ (TS _ 22) }
	'double'       { PT _ (TS _ 23) }
	'else'         { PT _ (TS _ 24) }
	'false'        { PT _ (TS _ 25) }
	'if'           { PT _ (TS _ 26) }
	'int'          { PT _ (TS _ 27) }
	'return'       { PT _ (TS _ 28) }
	'string'       { PT _ (TS _ 29) }
	'throw'        { PT _ (TS _ 30) }
	'true'         { PT _ (TS _ 31) }
	'void'         { PT _ (TS _ 32) }
	'while'        { PT _ (TS _ 33) }
	'{'            { PT _ (TS _ 34) }
	'||'           { PT _ (TS _ 35) }
	'}'            { PT _ (TS _ 36) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pListStm rule  6
	%start_pExp15   rule  7
	%start_pExp14   rule  8
	%start_pExp13   rule  9
	%start_pExp12   rule  10
	%start_pExp11   rule  11
	%start_pExp10   rule  12
	%start_pExp9    rule  13
	%start_pExp8    rule  14
	%start_pExp4    rule  15
	%start_pExp3    rule  16
	%start_pExp2    rule  17
	%start_pExp1    rule  18
	%start_pExp     rule  19
	%start_pExp5    rule  20
	%start_pExp6    rule  21
	%start_pExp7    rule  22
	%start_pListExp rule  23
	%start_pType    rule  24
	%start_pListId  rule  25
	Integer         rule  26
	Double          rule  27
	String          rule  28
	Id              rule  29
	Program         rule  30
	Def             rule  31
	ListDef         rules 32, 33
	Arg             rule  34
	ListArg         rules 35, 36, 37
	Stm             rules 38, 39, 40, 41, 42, 43, 44, 45
	ListStm         rules 46, 47
	Exp15           rules 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58
	Exp14           rules 59, 60, 61
	Exp13           rules 62, 63, 64
	Exp12           rules 65, 66, 67
	Exp11           rules 68, 69, 70
	Exp10           rules 71, 72, 73
	Exp9            rules 74, 75, 76, 77, 78
	Exp8            rules 79, 80, 81
	Exp4            rules 82, 83
	Exp3            rules 84, 85
	Exp2            rules 86, 87
	Exp1            rules 88, 89
	Exp             rule  90
	Exp5            rule  91
	Exp6            rule  92
	Exp7            rule  93
	ListExp         rules 94, 95, 96
	Type            rules 97, 98, 99, 100, 101
	ListId          rules 102, 103

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 32
	'double'       reduce using rule 32
	'int'          reduce using rule 32
	'string'       reduce using rule 32
	'void'         reduce using rule 32
	%eof           reduce using rule 32

	Program        goto state 98
	ListDef        goto state 99

State 1


	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'void'         shift, and enter state 36

	Def            goto state 96
	Type           goto state 97

State 2


	'bool'         reduce using rule 32
	'double'       reduce using rule 32
	'int'          reduce using rule 32
	'string'       reduce using rule 32
	'void'         reduce using rule 32
	%eof           reduce using rule 32

	ListDef        goto state 95

State 3


	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'void'         shift, and enter state 36

	Arg            goto state 94
	Type           goto state 93

State 4


	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'void'         shift, and enter state 36
	%eof           reduce using rule 35

	Arg            goto state 91
	ListArg        goto state 92
	Type           goto state 93

State 5


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'if'           shift, and enter state 87
	'int'          shift, and enter state 34
	'return'       shift, and enter state 88
	'string'       shift, and enter state 35
	'throw'        shift, and enter state 63
	'true'         shift, and enter state 64
	'void'         shift, and enter state 36
	'while'        shift, and enter state 89
	'{'            shift, and enter state 90
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 65
	L_quoted       shift, and enter state 66
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Stm            goto state 84
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp10          goto state 46
	Exp9           goto state 47
	Exp8           goto state 48
	Exp4           goto state 49
	Exp3           goto state 50
	Exp2           goto state 51
	Exp1           goto state 52
	Exp            goto state 85
	Exp5           goto state 54
	Exp6           goto state 55
	Exp7           goto state 56
	Type           goto state 86

State 6


	'('            reduce using rule 46
	'++'           reduce using rule 46
	'--'           reduce using rule 46
	'bool'         reduce using rule 46
	'double'       reduce using rule 46
	'false'        reduce using rule 46
	'if'           reduce using rule 46
	'int'          reduce using rule 46
	'return'       reduce using rule 46
	'string'       reduce using rule 46
	'throw'        reduce using rule 46
	'true'         reduce using rule 46
	'void'         reduce using rule 46
	'while'        reduce using rule 46
	'{'            reduce using rule 46
	L_integ        reduce using rule 46
	L_doubl        reduce using rule 46
	L_quoted       reduce using rule 46
	L_Id           reduce using rule 46
	%eof           reduce using rule 46

	ListStm        goto state 83

State 7


	'('            shift, and enter state 59
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'true'         shift, and enter state 64
	'void'         shift, and enter state 36
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 65
	L_quoted       shift, and enter state 66
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 82
	Type           goto state 58

State 8


	'('            shift, and enter state 59
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'true'         shift, and enter state 64
	'void'         shift, and enter state 36
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 65
	L_quoted       shift, and enter state 66
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 81
	Type           goto state 58

State 9


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'true'         shift, and enter state 64
	'void'         shift, and enter state 36
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 65
	L_quoted       shift, and enter state 66
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 80
	Type           goto state 58

State 10


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'true'         shift, and enter state 64
	'void'         shift, and enter state 36
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 65
	L_quoted       shift, and enter state 66
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 79
	Type           goto state 58

State 11


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'true'         shift, and enter state 64
	'void'         shift, and enter state 36
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 65
	L_quoted       shift, and enter state 66
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 78
	Type           goto state 58

State 12


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'true'         shift, and enter state 64
	'void'         shift, and enter state 36
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 65
	L_quoted       shift, and enter state 66
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp10          goto state 77
	Type           goto state 58

State 13


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'true'         shift, and enter state 64
	'void'         shift, and enter state 36
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 65
	L_quoted       shift, and enter state 66
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp10          goto state 46
	Exp9           goto state 76
	Type           goto state 58

State 14


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'true'         shift, and enter state 64
	'void'         shift, and enter state 36
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 65
	L_quoted       shift, and enter state 66
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp10          goto state 46
	Exp9           goto state 47
	Exp8           goto state 75
	Type           goto state 58

State 15


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'true'         shift, and enter state 64
	'void'         shift, and enter state 36
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 65
	L_quoted       shift, and enter state 66
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp10          goto state 46
	Exp9           goto state 47
	Exp8           goto state 48
	Exp4           goto state 74
	Exp5           goto state 54
	Exp6           goto state 55
	Exp7           goto state 56
	Type           goto state 58

State 16


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'true'         shift, and enter state 64
	'void'         shift, and enter state 36
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 65
	L_quoted       shift, and enter state 66
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp10          goto state 46
	Exp9           goto state 47
	Exp8           goto state 48
	Exp4           goto state 49
	Exp3           goto state 73
	Exp5           goto state 54
	Exp6           goto state 55
	Exp7           goto state 56
	Type           goto state 58

State 17


	'('            shift, and enter state 59
	'++'           shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'true'         shift, and enter state 64
	'void'         shift, and enter state 36
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 65
	L_quoted       shift, and enter state 66
	L_Id           shift, and enter state 30
